# lib_tutorial

./: README.md
app1/: CMakeLists.txt  calcapp.cpp
lib1/: CMakeLists.txt
lib1/examples/: CMakeLists.txt  calcapp.cpp
lib1/include/calc/: Calculator.h  Datatypes.h  Header.h  change_endianness.h
lib1/include/lib1/: Calculator.h  Operation.h
lib1/src/: CMakeLists.txt  COPYING  Calculator.cpp  Datatypes.cpp  Header.cpp  NanologConfig.cmake  README  calc.pc.in  log.h
