cmake_minimum_required(VERSION 3.12)

project(calc VERSION 0.0.1 DESCRIPTION "Calculator Library")

set(CMAKE_CXX_STANDARD 17)

# Packaging
set(CPACK_GENERATOR "DEB")
set(CPACK_PACKAGE_CONTACT "Waqqas Jabbar")
# set(CPACK_DEBIAN_PACKAGE_DEPENDS "")
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${PROJECT_DESCRIPTION}")
set(CPACK_PACKAGE_VENDOR "Emumba Inc.")
set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

include(CPack)


include(GNUInstallDirs)

find_package(Threads REQUIRED)
list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_SOURCE_DIR})
find_package(Nanolog REQUIRED)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/include)

file(GLOB HEADERS ${CMAKE_SOURCE_DIR}/include/calc/*.h)
file(GLOB SOURCES *.cpp)

add_library(${PROJECT_NAME} STATIC ${SOURCES} ${HEADERS})

# set_property(TARGET ${PROJECT_NAME} PROPERTY IMPORTED_LOCATION ${Nanolog_LIB_DIR}/libNanolog.a)

add_dependencies(${PROJECT_NAME} Nanolog)

target_link_libraries(${PROJECT_NAME} PRIVATE Threads::Threads Nanolog rt)

set_target_properties(${PROJECT_NAME} PROPERTIES
    VERSION ${PROJECT_VERSION}
    SOVERSION 1
    PUBLIC_HEADER "${HEADERS}")     # added in quotes

configure_file(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)

target_include_directories(${PROJECT_NAME} PRIVATE .)
target_include_directories(${PROJECT_NAME} PUBLIC ${Nanolog_INCLUDE_DIR})
target_include_directories(${PROJECT_NAME} PUBLIC ${Nanolog_INSTALL_DIR}/include)
# target_link_directories(${PROJECT_NAME} PRIVATE ${THIRD_PARTY_SOURCE_DIR}/nanolog/lib)
# target_link_libraries(${PROJECT_NAME} PRIVATE Nanolog)

install(TARGETS ${PROJECT_NAME}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc
    DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig)